--- a/articles/templates/articles/base.html
+++ b/articles/templates/articles/base.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <title>Note information</title>
+    <title>Computer science portal</title>
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css"/>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'noteapp/style.css' %}">
+    <link rel="stylesheet" href="{% static 'articles/style.css' %}">
 </head>
 <body>
 <main class="container">
     <nav style="margin-bottom: 20px; border-bottom: 2px solid; padding-left: 30px">
         <ul>
-            <li><a href="/" role="button"> Go back to the main page </a></li>
+            <li><a href="/" role="button">Повернутися на головну сторінку</a></li>
         </ul>
     </nav>
     {% block content %} {% endblock %}
