--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -8,10 +8,21 @@
 <body>
 <main class="container">
     <nav style="margin-bottom: 20px; border-bottom: 2px solid; padding-left: 30px">
+        {% if user.is_authenticated %}
         <ul>
             <li><a href="{% url 'articles:art' %}" role="button">Подати статтю</a></li>
             <li><a href="{% url 'articles:categories' %}" role="button">Додати розділ</a></li>
         </ul>
+        <ul>
+            <li>Welcome <b>{{ user.username }}!</b></li>
+            <li><a href="{% url 'users:logout' %}" role="button">Logout</a></li>
+            </ul>
+            {% else %}
+            <ul>
+                <li><a href="{% url 'users:signup' %}" role="button">Sign Up</a></li>
+                <li><a href="{% url 'users:login' %}" role="button">Login</a></li>
+            </ul> 
+    {% endif %}
     </nav>
 
     {% for art in articles %}
